--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,11 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+.banner{
+  height: 200px;
+  text-align: center;
+  h1{
+    color: white;
+  }
+}
