--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,41 @@
 // Specific CSS for your home-page
+.banner {
+  background-size: cover;
+  background-position: center;
+
+  h1 {
+    margin: 0;
+    color: white;
+    align-items: center;
+    font-size: 32px;
+    font-weight: bold;
+    display: flex;
+    padding: 75px 0;
+  }
+
+}
+
+.styled{
+  height: 300px;
+}
+
+.cards{
+  display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 9px;
+
+  .card-category {
+    background-size: cover;
+    background-position: center;
+    height: 150px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 22px;
+    color: white;
+    font-weight: bolder;
+    text-shadow: 0 0 10px rgba(0,0,0,0.7);
+  }
+}
